[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "test_pypi_abc"
version = "0.0.1"
authors = [
    {name = "Zesen Cheng", email = "ross@huggingface.co"},
    {name = "Hang Zhang"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Education',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Scientific/Engineering',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    'ftfy',
    'tqdm',
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.pdm.build]
excludes = ["./**/.git", "./**/logs/*"]
package-dir = "."
includes = ["./test_pypi_abc"]
